k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pr-preview-service
spec:
  selector:
    app: pr-preview-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
