k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pr-preview-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: preview.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pr-preview-service
            port:
              number: 80
